fixed horizontal scroll on mobile

--- a/app/_sass/common/_misc.scss
+++ b/app/_sass/common/_misc.scss
@@ -14,6 +14,7 @@
 body{
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
+	overflow-x: hidden;
 }
 .img-collor{
 	fill: red;
@@ -23,4 +24,5 @@ body{
 	padding: 0 10px;
 	margin: auto;
 }
+
 
